[package]
name = "rhythia-rp-finder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhythia-rp-finder"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
