[package]
name = "rhythia-rp-finder"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rhythia-rp-finder"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
